force-app/main/default/objects/Account/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <description>What type of partnership is this relationship?</description>
    <inlineHelpText>What type of partnership is this relationship?</inlineHelpText>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>BPO + White Label</fullName>
            </value>
            <value>
                <fullName>Full White Label</fullName>
            </value>
            <value>
                <fullName>Direct Referral</fullName>
            </value>
            <value>
                <fullName>Integrated Partnership Referral</fullName>
            </value>
            <value>
                <fullName>Marketplace Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>