force-app/main/default/objects/Account/fields/PayPartner__c.field-meta.xml
<CustomField>
    <fullName>PayPartner__c</fullName>
    <label>Pay Partner?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Credit the Client</fullName>
            </value>
            <value>
                <fullName>Pay Advisor</fullName>
            </value>
            <value>
                <fullName>Pay Payroll Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>