force-app/main/default/objects/Account/fields/Payroll_partner_notes__c.field-meta.xml
<CustomField>
    <fullName>Payroll_partner_notes__c</fullName>
    <label>Partner notes</label>
    <type>TextArea</type>
</CustomField>