force-app/main/default/objects/Account/fields/PCRAAnnualFee__c.field-meta.xml
<CustomField>
    <fullName>PCRAAnnualFee__c</fullName>
    <label>PCRA Annual Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>$250</fullName>
            </value>
            <value>
                <fullName>$250/Waive Participant</fullName>
            </value>
            <value>
                <fullName>Waive $250</fullName>
            </value>
            <value>
                <fullName>Waive both fees</fullName>
            </value>
            <value>
                <fullName>$750</fullName>
            </value>
            <value>
                <fullName>$1250</fullName>
            </value>
            <value>
                <fullName>$1750</fullName>
            </value>
            <value>
                <fullName>See Notes</fullName>
            </value>
            <value>
                <fullName>Waive fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>