force-app/main/default/objects/Account/fields/Physical_Address_Same_as_Billing__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Same_as_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Address Same as Billing</label>
    <type>Checkbox</type>
</CustomField>