force-app/main/default/objects/Account/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <description>Enter only if Billing Address is a PO Box</description>
    <inlineHelpText>Enter only if Billing Address is a PO Box</inlineHelpText>
    <label>Physical City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>