force-app/main/default/objects/Account/fields/Physical_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street_Address__c</fullName>
    <description>Enter only if Billing Address is a PO Box</description>
    <inlineHelpText>Enter only if Billing Address is a PO Box</inlineHelpText>
    <label>Physical Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>