force-app/main/default/objects/Account/fields/Physical_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip_Code__c</fullName>
    <description>Enter only if Billing Address is a PO Box</description>
    <inlineHelpText>Enter only if Billing Address is a PO Box</inlineHelpText>
    <label>Physical Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>