force-app/main/default/objects/Account/fields/Plan_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sold_Date__c</fullName>
    <label>Plan Sold Date</label>
    <type>Date</type>
</CustomField>