force-app/main/default/objects/Account/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <description>Status of Plan(s) connected to Account. Active Status overrides any others.</description>
    <inlineHelpText>Status of Plan(s) connected to Account. Active Status overrides any others.</inlineHelpText>
    <label>Plan Status</label>
    <type>TextArea</type>
</CustomField>