force-app/main/default/objects/Account/fields/Plan_Value__c.field-meta.xml
<CustomField>
    <fullName>Plan_Value__c</fullName>
    <description>Plan value based on employee count and service option</description>
    <label>Plan Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>