force-app/main/default/objects/Account/fields/Priority_Service__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the plan require priority service? This is updated on the plan record then a flow checks/unchecks this box.</description>
    <label>Priority Service</label>
    <type>Checkbox</type>
</CustomField>