force-app/main/default/objects/Account/fields/Products_Offered__c.field-meta.xml
<CustomField>
    <fullName>Products_Offered__c</fullName>
    <description>What types of products does the competitor offer?</description>
    <inlineHelpText>What types of products does the competitor offer?</inlineHelpText>
    <label>Products Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>Cash Balance</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>