force-app/main/default/objects/Account/fields/Record_Keeping_System__c.field-meta.xml
<CustomField>
    <fullName>Record_Keeping_System__c</fullName>
    <description>What type of RK Platform do they currently use</description>
    <label>Recordkeeping Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>SunGard OMNI</fullName>
            </value>
            <value>
                <fullName>SunGard Relius</fullName>
            </value>
            <value>
                <fullName>DST TRAC</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
            </value>
            <value>
                <fullName>FASCore</fullName>
            </value>
            <value>
                <fullName>Schwab SRT</fullName>
            </value>
            <value>
                <fullName>Ascensus</fullName>
            </value>
            <value>
                <fullName>Wystar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>