force-app/main/default/objects/Account/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <label>Relationship Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alyssa Witt</fullName>
            </value>
            <value>
                <fullName>Mike Bisset</fullName>
            </value>
            <value>
                <fullName>Linnae LaCore</fullName>
            </value>
            <value>
                <fullName>Estee Hayes</fullName>
            </value>
            <value>
                <fullName>Jason Gross</fullName>
            </value>
            <value>
                <fullName>Robby Forsythe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>