force-app/main/default/objects/Account/fields/Revenue_Share_Option__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Option__c</fullName>
    <label>Revenue Share Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>