force-app/main/default/objects/Account/fields/Review_Average__c.field-meta.xml
<CustomField>
    <fullName>Review_Average__c</fullName>
    <description>The average review score from the past 6 months.</description>
    <inlineHelpText>The average review score from the past 6 months.</inlineHelpText>
    <label>Review Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>