force-app/main/default/objects/Account/fields/Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This plan has selected the Safe Harbor feature.</description>
    <inlineHelpText>This field should be checked if the plan has opted for Safe Harbor.</inlineHelpText>
    <label>Safe Harbor</label>
    <type>Checkbox</type>
</CustomField>