force-app/main/default/objects/Account/fields/Safe_Harbor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Formula__c</fullName>
    <description>Used for Client Marketing purposes in MC.</description>
    <inlineHelpText>Used for Client Marketing purposes in MC.</inlineHelpText>
    <label>Safe Harbor Formula</label>
    <type>TextArea</type>
</CustomField>