force-app/main/default/objects/Account/fields/Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes__c</fullName>
    <description>Use for competitors to indicate best practices for selling against or preventing transitions to this competitor.</description>
    <inlineHelpText>Use for competitors to indicate best practices for selling against or preventing transitions to this competitor.</inlineHelpText>
    <label>Sales Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>