force-app/main/default/objects/Account/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>Express(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>RK Only</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Custom(k) MML</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Single(k) Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>