force-app/main/default/objects/Account/fields/Setup_fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_fee__c</fullName>
    <description>Competitor set up fee</description>
    <label>Setup fee</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>