force-app/main/default/objects/Account/fields/SFTP_Login_Cred_Requested__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Login_Cred_Requested__c</fullName>
    <label>SFTP Login Cred Requested</label>
    <type>Date</type>
</CustomField>