force-app/main/default/objects/Account/fields/SFTP_Login_Cred_Sent__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Login_Cred_Sent__c</fullName>
    <label>SFTP Login Cred Sent</label>
    <type>Date</type>
</CustomField>