force-app/main/default/objects/Account/fields/Single_Bank_and_Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Single_Bank_and_Payroll_Schedule__c</fullName>
    <description>For Finch</description>
    <inlineHelpText>For Finch</inlineHelpText>
    <label>Single Bank and Payroll Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>