force-app/main/default/objects/Account/fields/SOC_Required__c.field-meta.xml
<CustomField>
    <fullName>SOC_Required__c</fullName>
    <description>Is a SOC required for this vendor?</description>
    <inlineHelpText>Is a SOC required for this vendor?</inlineHelpText>
    <label>SOC Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Values</valueSetName>
    </valueSet>
</CustomField>