force-app/main/default/objects/Account/fields/Software_Vendor_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Software_Vendor_Payroll__c</fullName>
    <label>Payroll Software Vendor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>