force-app/main/default/objects/Account/fields/SpecialFees__c.field-meta.xml
<CustomField>
    <fullName>SpecialFees__c</fullName>
    <label>Special Fees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>$500 Fund Changes</fullName>
            </value>
            <value>
                <fullName>See Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>