force-app/main/default/objects/Account/fields/Strategic_Partner__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partner__c</fullName>
    <inlineHelpText>We want to identify if a client signed up via an external partner and who that partner is.</inlineHelpText>
    <label>Strategic Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisors</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>Zenefits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>