force-app/main/default/objects/Account/fields/Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Target_Market__c</fullName>
    <description>In a sentence or two describe the competitors target market.</description>
    <inlineHelpText>In a sentence or two describe the competitors target market.</inlineHelpText>
    <label>Target Market</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>