force-app/main/default/objects/Account/fields/Test_Files_Received__c.field-meta.xml
<CustomField>
    <fullName>Test_Files_Received__c</fullName>
    <label>Test Files Received</label>
    <type>Date</type>
</CustomField>