force-app/main/default/objects/Account/fields/Test_Files_Requested__c.field-meta.xml
<CustomField>
    <fullName>Test_Files_Requested__c</fullName>
    <label>Test Files Requested</label>
    <type>Date</type>
</CustomField>