force-app/main/default/objects/Account/fields/Test_Files_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Test_Files_Reviewed__c</fullName>
    <label>Test Files Reviewed</label>
    <type>Date</type>
</CustomField>