force-app/main/default/objects/Account/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within the next 30 days</fullName>
            </value>
            <value>
                <fullName>In 31-60 days</fullName>
            </value>
            <value>
                <fullName>In 61-90 days</fullName>
            </value>
            <value>
                <fullName>Greater than 90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>