force-app/main/default/objects/Account/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <formula>IF(CONTAINS( $Label.Pacific_Timezone, TEXT(BillingStateCode)),&quot;Pacific&quot;,
IF(CONTAINS( $Label.Mountain_Timezone , TEXT(BillingStateCode)),&quot;Mountain&quot;,
IF(CONTAINS( $Label.Central_Timezone,TEXT(BillingStateCode)),&quot;Central&quot;,
IF(CONTAINS( $Label.Eastern_Timezone,TEXT(BillingStateCode)),&quot;Eastern&quot;,
IF(ISPICKVAL(BillingStateCode,&quot;AK&quot;),&quot;Alaskan&quot;,
IF(ISPICKVAL(BillingStateCode,&quot;HI&quot;),&quot;Hawaiian&quot;, 
null))))))</formula>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>