force-app/main/default/objects/Account/fields/TimezoneDELETE__c.field-meta.xml
<CustomField>
    <fullName>TimezoneDELETE__c</fullName>
    <description>Timezone for primary location for company.</description>
    <inlineHelpText>Timezone for primary location for company.</inlineHelpText>
    <label>TimezoneDELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Alaskan</fullName>
            </value>
            <value>
                <fullName>Hawaiian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>