force-app/main/default/objects/Account/fields/Total_Number_of_Fee_Waivers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Fee_Waivers__c</fullName>
    <label>Total Number of Fee Waivers</label>
    <summaryFilterItems>
        <field>Fee_Waiver__c.Fee_Waiver_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Fee_Waiver__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>