force-app/main/default/objects/Account/fields/TypeofBusiness__c.field-meta.xml
<CustomField>
    <fullName>TypeofBusiness__c</fullName>
    <inlineHelpText>This field name has been updated from Type of  Business.</inlineHelpText>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Conversion Plan</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>