force-app/main/default/objects/Account/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, show the vendor details section on account page</description>
    <inlineHelpText>Check this box if the account is a vendor</inlineHelpText>
    <label>Vendor</label>
    <type>Checkbox</type>
</CustomField>