force-app/main/default/objects/Account/fields/Vendor_Configured_in_Paradigm__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Configured_in_Paradigm__c</fullName>
    <label>Vendor Configured in Paradigm</label>
    <type>Date</type>
</CustomField>