force-app/main/default/objects/Account/fields/Vendor_Policies__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Policies__c</fullName>
    <description>Box link that stores vendor policies</description>
    <label>Vendor Policies</label>
    <type>Url</type>
</CustomField>