force-app/main/default/objects/Account/fields/Vendor_Risk__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Risk__c</fullName>
    <description>Level of risk in the relationship</description>
    <inlineHelpText>Level of risk in the relationship</inlineHelpText>
    <label>Vendor Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>