force-app/main/default/objects/Account/fields/Vendor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Tier__c</fullName>
    <description>What tier is this vendor? Vendor tier correlates to level of scrutiny/oversight required</description>
    <inlineHelpText>Low Risk, No Security Impact = Tier 4/
Low Risk, Security Impact = Tier 3/
Medium Risk, Departmental Minimal Impact = Tier 3/
Medium Risk, Enterprise-Wide Minimal Impact = Tier 2/
High Risk, Departmental Impact Only = Tier 2/
High Risk, Enterprise-Wide Impact = Tier 1/
Very High Risk, Enterprise-Wide Severe Impact = Tier 1</inlineHelpText>
    <label>Vendor Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>